# contacts-graphql-python

./: README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: config.py
app/database/: client.py
app/dependencies/: context.py  database.py
app/entities/: base.py  contact.py
app/exceptions/: base.py  token.py  user.py
app/helper/: generator.py  response.py  token.py
app/models/: contact.py  user.py
app/repositories/: contact.py  interface.py
app/resolvers/: base.py  contact.py
app/schemas/: contact.py
app/services/: contact.py
migrations/: env.py
migrations/versions/: 2024_12_18_generate_table_contact.py
tests/: test_config.py
tests/database/: test_client.py
tests/dependencies/: test_context.py  test_database.py
tests/entities/: test_base.py  test_contact.py
tests/exceptions/: test_base.py
tests/helper/: test_generator.py  test_response.py
tests/models/: test_contact.py
tests/resolvers/: test_base.py  test_contact.py
